# atom-vibe-coder

./: .gitignore  LICENSE  README.md  START-ATOM-QWEN-TEST.cmd  atom-extension-16.md
.github/workflows/: ci.yml
app/: app-data.js  app.js  index.html  styles.css
artifacts/bluetooth-driver/: bluetooth_driver.rs  driver-review.md  run-output.txt
atom-rendering-engine-main/: .gitignore  Cargo.toml  LICENSE  README.md
atom-rendering-engine-main/.github/workflows/: ci.yml
atom-rendering-engine-main/avc-core/: Cargo.toml
atom-rendering-engine-main/avc-core/src/: lib.rs
atom-rendering-engine-main/docs/: DEVELOPER_GUIDE.md  PROVIDER_RUNTIME.md  TRANSPARENCY_COOKBOOK.md
atom-rendering-engine-main/math-atoms-attestation/: Cargo.toml
atom-rendering-engine-main/math-atoms-attestation/src/: lib.rs
atom-rendering-engine-main/math-atoms-bus/: Cargo.toml
atom-rendering-engine-main/math-atoms-bus/src/: lib.rs
atom-rendering-engine-main/math-atoms-core/: Cargo.toml
atom-rendering-engine-main/math-atoms-core/examples/: learning_context_probe.rs  provider_probe.rs
atom-rendering-engine-main/math-atoms-core/src/: bus.rs  domain.rs  graph.rs  lib.rs  provider.rs  provider_verification.rs  runtime.rs  store.rs
atom-rendering-engine-main/math-atoms-doctrine/: Cargo.toml
atom-rendering-engine-main/math-atoms-doctrine/src/: lib.rs
atom-rendering-engine-main/math-atoms-graph/: Cargo.toml
atom-rendering-engine-main/math-atoms-graph/src/: lib.rs
atom-rendering-engine-main/math-atoms-hash/: Cargo.toml
atom-rendering-engine-main/math-atoms-hash/src/: lib.rs
atom-rendering-engine-main/math-atoms-json/: Cargo.toml
atom-rendering-engine-main/math-atoms-json/src/: lib.rs
atom-rendering-engine-main/math-atoms-learning/: Cargo.toml
atom-rendering-engine-main/math-atoms-learning/src/: lib.rs
atom-rendering-engine-main/math-atoms-lock/: Cargo.toml
atom-rendering-engine-main/math-atoms-lock/src/: lib.rs
atom-rendering-engine-main/math-atoms-native/: Cargo.toml
atom-rendering-engine-main/math-atoms-native-ledger/: Cargo.toml
atom-rendering-engine-main/math-atoms-native-ledger/src/: lib.rs
atom-rendering-engine-main/math-atoms-native/src/: main.rs  model.rs  ui.rs  win.rs
atom-rendering-engine-main/math-atoms-proof/: Cargo.toml
atom-rendering-engine-main/math-atoms-proof/src/: lib.rs
atom-rendering-engine-main/math-atoms-provider-transport/: Cargo.toml
atom-rendering-engine-main/math-atoms-provider-transport/src/: lib.rs
atom-rendering-engine-main/math-atoms-repair/: Cargo.toml
atom-rendering-engine-main/math-atoms-repair/src/: lib.rs
atom-rendering-engine-main/math-atoms-secrets/: Cargo.toml
atom-rendering-engine-main/math-atoms-secrets/src/: lib.rs
atom-rendering-engine-main/math-atoms-verification/: Cargo.toml
atom-rendering-engine-main/math-atoms-verification/src/: lib.rs  model.rs  runner.rs  store.rs
atom-rendering-engine-main/math-atoms-work/: Cargo.toml
atom-rendering-engine-main/math-atoms-work/src/: lib.rs  model.rs  planner.rs  store.rs
atom-rendering-engine-main/pmre-examples/: Cargo.toml
atom-rendering-engine-main/pmre-examples/examples/: app.rs  bench.rs  bloom.rs  calc.rs  cpu_profile.rs  gradients.rs  math_atoms_coder.rs  ordo.rs  paths.rs  sweep.rs
atom-rendering-engine-main/pmre-font/: Cargo.toml
atom-rendering-engine-main/pmre-font/src/: lib.rs
atom-rendering-engine-main/pmre-html/: Cargo.toml
atom-rendering-engine-main/pmre-html/src/: lib.rs
atom-rendering-engine-main/pmre-kit/: Cargo.toml
atom-rendering-engine-main/pmre-kit/src/: bloom_sweep.rs  fair_queue.rs  framebuffer.rs  geom.rs  html.rs  layout.rs  lib.rs  paint.rs  path.rs  post.rs  raster.rs  text.rs  ux.rs
atom-rendering-engine-main/pmre-orchestrator/: Cargo.toml
atom-rendering-engine-main/pmre-orchestrator/examples/: app.rs  bench.rs  demo.rs  html.rs  math_atoms_coder.rs  stroke.rs  todo.rs  ui.rs  uxi.rs
atom-rendering-engine-main/pmre-orchestrator/src/: gpu_bloom.rs  lib.rs
atom-rendering-engine-main/pmre-transparency/: Cargo.toml
atom-rendering-engine-main/pmre-transparency-core/: Cargo.toml
atom-rendering-engine-main/pmre-transparency-core/src/: capability.rs  color.rs  lib.rs  material.rs  math.rs  oit.rs  optics.rs  volume.rs
atom-rendering-engine-main/pmre-transparency/src/: lib.rs
knowledge/wiki/: atom-quantizer.md  atom-vibe-build-spine.md  index.md  (+12 more)
scripts/: Artifact-Manifest.ps1  Launch-Native-Qwen-LMStudio.ps1  Launch-Native.ps1  Learning-Loop.ps1  Native-Process.ps1  Test-DeepSeekToyApp.ps1  Test-DesignUploadBuild.ps1  Test-NativeFunctional.ps1  Test-NativeIdleCpu.ps1  Test-NativeInputEditing.ps1  Test-NativeLaunchEnvironment.ps1  Test-NativeProviderResponsiveness.ps1  Test-NativeVibeRuntime.ps1  Test-ProviderBuildBluetoothDriver.ps1  Test-ProviderBuildRealPmreApp.ps1  Test-ProviderBuildSeveralApps.ps1  Test-ProviderExecution.ps1  Test-ProviderLearningLocal.ps1  Test-QwenLmStudio.ps1  Test-RustCrateLineCaps.ps1  Test-SelfLearningFunctional.ps1  Test-WorkPacketResume.ps1  doctrine-check.mjs  smoke.mjs  verify-production.ps1
vibe-coder/: Cargo.toml  README.md
vibe-coder/atom-vibe-build-gates/: Cargo.toml
vibe-coder/atom-vibe-build-gates/src/: evaluate.rs  lib.rs  model.rs  source.rs
vibe-coder/atom-vibe-build-planner/: Cargo.toml
vibe-coder/atom-vibe-build-planner/src/: bus.rs  lib.rs  model.rs  planner.rs  store.rs
vibe-coder/atom-vibe-build-planner/tests/: full_spine.rs
vibe-coder/atom-vibe-context/: Cargo.toml
vibe-coder/atom-vibe-context/src/: lib.rs
vibe-coder/atom-vibe-mode/: Cargo.toml
vibe-coder/atom-vibe-mode/src/: lib.rs
vibe-coder/atom-vibe-native-bridge/: Cargo.toml
vibe-coder/atom-vibe-native-bridge/src/: lib.rs
vibe-coder/atom-vibe-provider/: Cargo.toml
vibe-coder/atom-vibe-provider/src/: body.rs  client.rs  lib.rs  model.rs  response.rs
vibe-coder/atom-vibe-runtime/: Cargo.toml
vibe-coder/atom-vibe-runtime/src/: contracts.rs  lib.rs  model.rs  runtime.rs  session.rs  turns.rs
vibe-coder/atom-vibe-scratchpad/: Cargo.toml
vibe-coder/atom-vibe-scratchpad/src/: lib.rs
(+36 files in other folders)
