# Atom Rendering Engine — a self-renderer from pure math primitives.
# Focused members keep each Rust crate below the global source-line cap while preserving
# the kit/orchestrator ownership boundary.
[workspace]
resolver = "2"
members = [
    "math-atoms-core",
    "math-atoms-native",
    "pmre-font",
    "pmre-html",
    "pmre-kit",
    "pmre-orchestrator",
    "pmre-examples",
]
