# Atom Rendering Engine — a self-renderer from pure math primitives.
# Focused members keep each Rust crate below the global source-line cap while preserving
# the kit/orchestrator ownership boundary.
[workspace]
resolver = "2"
members = [
    "math-atoms-bus",
    "math-atoms-core",
    "math-atoms-doctrine",
    "math-atoms-graph",
    "math-atoms-hash",
    "math-atoms-json",
    "math-atoms-learning",
    "math-atoms-native",
    "math-atoms-proof",
    "math-atoms-provider-transport",
    "math-atoms-secrets",
    "math-atoms-work",
    "pmre-font",
    "pmre-html",
    "pmre-kit",
    "pmre-orchestrator",
    "pmre-examples",
]
