# Atom Rendering Engine — a self-renderer from pure math primitives.
# Focused members keep each Rust crate below the global source-line cap while preserving
# the kit/orchestrator ownership boundary.
[workspace]
resolver = "2"
# OPERATOR_APPROVED_CARGO_DEP: workspace member list only. avc-core is a local,
# zero-external-dependency crate (the vendored fast Atom Vibe Coder path).
members = [
    "avc-core",
    "math-atoms-attestation",
    "math-atoms-bus",
    "math-atoms-core",
    "math-atoms-doctrine",
    "math-atoms-graph",
    "math-atoms-hash",
    "math-atoms-json",
    "math-atoms-learning",
    "math-atoms-lock",
    "math-atoms-native",
    "math-atoms-proof",
    "math-atoms-provider-transport",
    "math-atoms-repair",
    "math-atoms-secrets",
    "math-atoms-verification",
    "math-atoms-work",
    "pmre-font",
    "pmre-html",
    "pmre-kit",
    "pmre-transparency-core",
    "pmre-transparency",
    "pmre-orchestrator",
    "pmre-examples",
]
