[package]
name = "math-atoms-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Atom Vibe Coder runtime: Spiderweb Bus, graph retrieval, provider setup, and proof state."

[dependencies]
math-atoms-bus = { path = "../math-atoms-bus" }
math-atoms-doctrine = { path = "../math-atoms-doctrine" }
math-atoms-graph = { path = "../math-atoms-graph" }
math-atoms-hash = { path = "../math-atoms-hash" }
math-atoms-json = { path = "../math-atoms-json" }
math-atoms-learning = { path = "../math-atoms-learning" }
math-atoms-proof = { path = "../math-atoms-proof" }
math-atoms-provider-transport = { path = "../math-atoms-provider-transport" }
math-atoms-secrets = { path = "../math-atoms-secrets" }
math-atoms-verification = { path = "../math-atoms-verification" }
math-atoms-work = { path = "../math-atoms-work" }
