[package]
name = "math-atoms-learning"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Durable, dependency-free learning ledger for Atom Vibe Coder."

[dependencies]
math-atoms-hash = { path = "../math-atoms-hash" }
math-atoms-json = { path = "../math-atoms-json" }

[[bin]]
name = "learning_probe"
path = "src/bin/learning_probe.rs"
