[package]
name = "math-atoms-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native PMRE shell for Atom Vibe Coder."

[dependencies]
# OPERATOR_APPROVED_CARGO_DEP: local, zero-external-dep crate. The fast single-shot
# Atom Vibe Coder path vendored from the v1 build, wired to the Run button.
avc-core = { path = "../avc-core" }
atom-vibe-native-bridge = { path = "../../vibe-coder/atom-vibe-native-bridge" }
math-atoms-core = { path = "../math-atoms-core" }
# OPERATOR_APPROVED_CARGO_DEP: local, zero-external-dep crate. Pure record-builders
# extracted from this crate's model.rs to stay under the Painted-Fence line cap.
math-atoms-native-ledger = { path = "../math-atoms-native-ledger" }
pmre-kit = { path = "../pmre-kit" }
pmre-orchestrator = { path = "../pmre-orchestrator" }
