[package]
name = "math-atoms-work"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fine-grained, resumable provider work packets for Atom Vibe Coder."

[dependencies]
math-atoms-hash = { path = "../math-atoms-hash" }
math-atoms-json = { path = "../math-atoms-json" }
math-atoms-secrets = { path = "../math-atoms-secrets" }
