[package]
name = "atom-vibe-build-planner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistent gate-owned planner and Spiderweb peer for Atom Vibe Coder."

[dependencies]
atom-vibe-build-gates = { path = "../atom-vibe-build-gates" }
atom-vibe-build-protocol = { path = "../atom-vibe-build-protocol" }
math-atoms-bus = { path = "../../atom-rendering-engine-main/math-atoms-bus" }
math-atoms-hash = { path = "../../atom-rendering-engine-main/math-atoms-hash" }
math-atoms-json = { path = "../../atom-rendering-engine-main/math-atoms-json" }
math-atoms-lock = { path = "../../atom-rendering-engine-main/math-atoms-lock" }
math-atoms-secrets = { path = "../../atom-rendering-engine-main/math-atoms-secrets" }
