[package]
name = "atom-vibe-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wiki Graph RAG and Spiderweb context intersection for Atom Vibe Coder."

[dependencies]
atom-vibe-build-protocol = { path = "../atom-vibe-build-protocol" }
atom-vibe-scratchpad = { path = "../atom-vibe-scratchpad" }
math-atoms-bus = { path = "../../atom-rendering-engine-main/math-atoms-bus" }
math-atoms-graph = { path = "../../atom-rendering-engine-main/math-atoms-graph" }

[dev-dependencies]
math-atoms-json = { path = "../../atom-rendering-engine-main/math-atoms-json" }
